--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,4 +1,4 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?dcdnlif#1" target="_blank">首页</a> | <a href="https://doqmgyop4u892.cloudfront.net/1?ujojg" target="_blank">动态网</a> | <a href="https://dwzgr3popmlhv.cloudfront.net/2?edavf" target="_blank">大纪元</a> | <a href="https://d239x61949z6p.cloudfront.net/4?gzbrp" target="_blank">看中国</a> | <a href="https://d19vw3711v9lks.cloudfront.net/pHh5q?wrxjbvupq" target="_blank">新生网</a> | <a href="https://dp0r2i3ixve2v.cloudfront.net/tktpt?entsskjyw" target="_blank">阿波罗网</a> | <a href="https://d29mno3lcgt6u3.cloudfront.net/Mjpvu?vdkhfep" target="_blank">干净世界</a> | <a href="https://d18bx7gz18d1cs.cloudfront.net/10?rxnqo" target="_blank">退党服务</a> | <a href="https://d1kgsi70b35buf.cloudfront.net/Rffqf?pdsojj" target="_blank">明慧广播</a> | <a href="https://di88ceki78g29.cloudfront.net/nw9Vn?idslc" target="_blank">传奇时代</a> | <a href="https://dnfbwsos78njn.cloudfront.net/AF9AG?yyuhl" target="_blank">新境界影视</a> | <a href="https://d21y52w6f35pla.cloudfront.net/zqMQA?nknkmz" target="_blank">文昭谈论</a> | <a href="https://dd92z3w2j4w9k.cloudfront.net/7?tqhjgozt" target="_blank">明慧</a></p><p><a href="https://d2rhftayg1puwj.cloudfront.net/9?bgymtwd" target="_blank">大法</a> | <a href="https://d78f5frq5siq8.cloudfront.net/3?zzjnlvwoc" target="_blank">新唐人</a> | <a href="https://dicfdkfbqptcm.cloudfront.net/obAhT?vzbtl" target="_blank">人民报</a> | <a href="https://d2aqxvnyguf0uq.cloudfront.net/xXNHu?vfakebou" target="_blank">放光明</a> | <a href="https://d13zv7yhtbxwll.cloudfront.net/5?muqbi" target="_blank">新纪元</a> | <a href="https://dl1ez95kskssm.cloudfront.net/6?czmpgdp" target="_blank">希望之声</a> | <a href="https://d1nm4aa0eu3bxh.cloudfront.net/11?dgzingvqn" target="_blank">无界网络</a> | <a href="https://d3frzobj0kj0md.cloudfront.net/Pueji?ryklrb" target="_blank">追查国际</a> | <a href="https://d2184d78prq5kd.cloudfront.net/16?crffprhzt" target="_blank">明慧之窗</a> | <a href="https://dsqxb3b7muii1.cloudfront.net/LdvzZ?whwpbjve" target="_blank">细语人生</a> | <a href="https://d124e4v75n9sum.cloudfront.net/fBn3r?csgju" target="_blank">新世纪影视</a> | <a href="https://dp5vkf7bbqo9d.cloudfront.net/PUWMb?dtqpl" target="_blank">江峰时刻</a> | <a href="https://d34v2ua3ud12rg.cloudfront.net/8?pwanhvmpv" target="_blank">正见</a></p></td></tr>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?rbcasx#1" target="_blank">首页</a> | <a href="https://d1znr9c9sm73cv.cloudfront.net/1?esdepb" target="_blank">动态网</a> | <a href="https://d1dy14m1lbgtrj.cloudfront.net/2?xambhca" target="_blank">大纪元</a> | <a href="https://dfu0th2rj4x8t.cloudfront.net/4?fuxakn" target="_blank">看中国</a> | <a href="https://d3cacbcgqcawbc.cloudfront.net/pHh5q?nhqov" target="_blank">新生网</a> | <a href="https://dlph7fabhsbfp.cloudfront.net/tktpt?tksms" target="_blank">阿波罗网</a> | <a href="https://d2zvse34bag8ol.cloudfront.net/Mjpvu?svdtib" target="_blank">干净世界</a> | <a href="https://dnfbwsos78njn.cloudfront.net/10?vhzooc" target="_blank">退党服务</a> | <a href="https://dcz6rimunj42y.cloudfront.net/Rffqf?vxbcm" target="_blank">明慧广播</a> | <a href="https://dh9kqnflpbxz3.cloudfront.net/nw9Vn?axgjb" target="_blank">传奇时代</a> | <a href="https://d2vpfo96xp4pjo.cloudfront.net/AF9AG?uvwyjstsn" target="_blank">新境界影视</a> | <a href="https://dkx26vh7i5y84.cloudfront.net/zqMQA?pajupwepp" target="_blank">文昭谈论</a> | <a href="https://dqgl8k1bfvgsc.cloudfront.net/7?msjzcnty" target="_blank">明慧</a></p><p><a href="https://d3qxeoyqwzrtyq.cloudfront.net/9?sljmtiwzc" target="_blank">大法</a> | <a href="https://d1tuw6k1rjq3u6.cloudfront.net/3?ukhlntfh" target="_blank">新唐人</a> | <a href="https://d1nvr7ffvd2d6n.cloudfront.net/obAhT?ietyyrquv" target="_blank">人民报</a> | <a href="https://d2axefeaz3j87r.cloudfront.net/xXNHu?suzgjzs" target="_blank">放光明</a> | <a href="https://d3frzobj0kj0md.cloudfront.net/5?mspkwbmnc" target="_blank">新纪元</a> | <a href="https://d1ogsjff5jad5d.cloudfront.net/6?ndjjweact" target="_blank">希望之声</a> | <a href="https://d3siwajeg0khti.cloudfront.net/11?rgbbumww" target="_blank">无界网络</a> | <a href="https://d1eqe8yfgc9j6n.cloudfront.net/Pueji?pwafdsedl" target="_blank">追查国际</a> | <a href="https://d1jex6syje0yji.cloudfront.net/16?ytqrsnh" target="_blank">明慧之窗</a> | <a href="https://d53tcmkdq4r1q.cloudfront.net/LdvzZ?lgvupo" target="_blank">细语人生</a> | <a href="https://d1fejrztdgsube.cloudfront.net/fBn3r?lhywp" target="_blank">新世纪影视</a> | <a href="https://dycmgeziwp90b.cloudfront.net/PUWMb?ysakxeb" target="_blank">江峰时刻</a> | <a href="https://d2h2x8lw1kpl69.cloudfront.net/8?kyhenmxg" target="_blank">正见</a></p></td></tr>
 <tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347201.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2024/10/id14347361-GettyImages-2176644241-320x200.jpg"><p align="center">A股暴跌 沪指失守3300点 创业板指跌逾10%</p></a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347201.md#1" title="A股暴跌 沪指失守3300点 创业板指跌逾10%""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/10/id14347361-GettyImages-2176644241-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347017.md#1" title="李强催专家救经济 分析：中共拖延危机爆发""><img width="73" src="https://i.epochtimes.com/assets/uploads/2023/11/id14112693-GettyImages-1248111990-320x200.jpg">&nbsp;</a>
@@ -13,25 +13,25 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346643.md#1" title="以色列总理：已击毙真主党领导人的接任者""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/09/id14340409-AFP__20240927__36H46F9__v2__Preview__UnDiplomacyUnga-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346732.md#1" title="美中商务部长通话 在国安问题上仍各说各话""><img width="73" src="https://i.epochtimes.com/assets/uploads/2023/08/id14062841-000_33TG4UA-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://1992513.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>10分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345699.md#1">失踪两年的宠物狗在好心人帮助下与主人团聚</a><br>
+:clock8: <em>1分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347022.md#1">夫妇翻修18世纪老宅 发现地下藏着一口古井</a><br>
+:clock8: <em>10分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14346866.md#1">【新闻大家谈】正国级大佬殁 聚焦北京权力架构</a><br>
+:clock8: <em>20分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347373.md#1">米尔顿扰乱大选 川普瞄准宾州 贺锦丽前往西部</a><br>
+:clock8: <em>30分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345699.md#1">失踪两年的宠物狗在好心人帮助下与主人团聚</a><br>
 :clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347136.md#1">中共军队神秘人事机构操盘手曝光</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347024.md#1">专家：台积电根留台湾全球布局 抵御中共威胁</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347114.md#1">宁波女商场坠亡 网传聊天记录疑似其炒股爆仓</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347024.md#1">专家：台积电根留台湾全球布局 抵御中共威胁</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347114.md#1">宁波女商场坠亡 网传聊天记录疑似其炒股爆仓</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347329.md#1">莫桑比克举行总统大选 执政党有望继续执政</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347263.md#1">民调：大多数台湾人认为5年内中共不会攻台</a><br>
+:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347263.md#1">民调：大多数台湾人认为5年内中共不会攻台</a><br>
 :clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346612.md#1">《九评》问世20周年 中国民众觉醒踊跃“三退”</a><br>
-:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347068.md#1">劳资谈判再陷僵局 波音公司收回30%涨薪方案</a><br>
-:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347217.md#1">双十前夕 共机14架次逾越中线 台国军严密掌握</a><br>
-:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347201.md#1">A股暴跌 沪指失守3300点 创业板指跌逾10%</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14346022.md#1">宁德时代停产 专家：中国锂电业进入淘汰赛</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346454.md#1">前政治局常委吴邦国病亡 “五不搞”曾引争议</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345980.md#1">土木工程专业为何从中国顶尖大学消失</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345745.md#1">徐客：中共军中“二秦”也落马？</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346326.md#1">消息：红二代曾欲藉王岐山改良中共 计划泡汤</a><br>
-<a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345305.md#1">退休10年者也要交护照 中共限制更多人出国</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346304.md#1">中共发改委发布会期间 港股暴跌2300多点</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14346070.md#1">“减持潮”席卷A股 两周内超百家公司股东离场</a><br>
+<a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345662.md#1">中共前司法部长唐一军被双开 移送司法</a><br>
 <br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>纪元推荐</strong></p></h2>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/20/n14294630.md#1">【特稿】七二零：黑暗与光的交战</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/5/8/n14243928.md#1">人类存亡危机与创世主的恩典</a><br>
@@ -58,6 +58,7 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346727.md#1">军情五处详述英国面对中共等国的安全威胁</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346732.md#1">美中商务部长通话 在国安问题上仍各说各话</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346855.md#1">王友群：赖清德又出金句 中共再现三大丑</a><br>
+<a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14346866.md#1">【新闻大家谈】正国级大佬殁 聚焦北京权力架构</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346612.md#1">《九评》问世20周年 中国民众觉醒踊跃“三退”</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14346885.md#1">山东76岁法轮功学员被枉判5年 狱中遭毒打</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14346859.md#1">【时事金扫描】克宫出大事 乌军黑了俄国电视网</a><br>
@@ -105,9 +106,8 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/24/10/4/n14344335.md#1">【新闻欣视角】大陆流行登革热 新冠卷土重来</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/10/5/n14344409.md#1">【新闻看点】习遭剪裙边？军队“监斩官”被贬</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/10/4/n14344321.md#1">【菁英论坛】特警击毙公安局长 官官互害时代</a><br>
-<a href="https://github.com/1992513/djy/blob/master/gb/24/10/4/n14344319.md#1">新华保险前高管被查 “五道口85级”接连出事</a><br>
-<br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://d1b6yj6s8b8ex0.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://d1b6yj6s8b8ex0.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://d1b6yj6s8b8ex0.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://d1b6yj6s8b8ex0.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://d1b6yj6s8b8ex0.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://d1b6yj6s8b8ex0.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://d1b6yj6s8b8ex0.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://d1b6yj6s8b8ex0.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://d1b6yj6s8b8ex0.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://d1b6yj6s8b8ex0.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://d1b6yj6s8b8ex0.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://d1b6yj6s8b8ex0.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://d1b6yj6s8b8ex0.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://d1b6yj6s8b8ex0.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://d1b6yj6s8b8ex0.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://d1b6yj6s8b8ex0.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://d1b6yj6s8b8ex0.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://d1b6yj6s8b8ex0.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://d1b6yj6s8b8ex0.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://d1b6yj6s8b8ex0.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://d1b6yj6s8b8ex0.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://d1b6yj6s8b8ex0.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://d1b6yj6s8b8ex0.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://d1b6yj6s8b8ex0.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://d1b6yj6s8b8ex0.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://d1b6yj6s8b8ex0.cloudfront.net/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 38,809</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
+<br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://dw2v5p7tg2fqw.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://dw2v5p7tg2fqw.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://dw2v5p7tg2fqw.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://dw2v5p7tg2fqw.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://dw2v5p7tg2fqw.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://dw2v5p7tg2fqw.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://dw2v5p7tg2fqw.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://dw2v5p7tg2fqw.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://dw2v5p7tg2fqw.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://dw2v5p7tg2fqw.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://dw2v5p7tg2fqw.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://dw2v5p7tg2fqw.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://dw2v5p7tg2fqw.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://dw2v5p7tg2fqw.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://dw2v5p7tg2fqw.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://dw2v5p7tg2fqw.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://dw2v5p7tg2fqw.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://dw2v5p7tg2fqw.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://dw2v5p7tg2fqw.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://dw2v5p7tg2fqw.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://dw2v5p7tg2fqw.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://dw2v5p7tg2fqw.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://dw2v5p7tg2fqw.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://dw2v5p7tg2fqw.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://dw2v5p7tg2fqw.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
+<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://dw2v5p7tg2fqw.cloudfront.net/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 38,809</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
 
 ```diff
 !退出中共党、团、队总人数:
